--- a/login.html
+++ b/login.html
@@ -14,6 +14,15 @@
   </head>
 
   <body>
+
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Polls</a>
+        </div>
+      </div>
+    </nav>
+
     <div class="jumbotron text-center">
       <h2>Login Page</h2>
       <p>Please enter your username and password</p>
