--- a/home_page.html
+++ b/home_page.html
@@ -14,7 +14,7 @@
 
   <body>
     
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Polls</a>
