--- a/login_page.html
+++ b/login_page.html
@@ -15,21 +15,25 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">Polls</a>
         </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Login</a></li>
+        </ul>
       </div>
     </nav>
 
-    <div class="jumbotron text-center">
-      <h2>Login Page</h2>
-      <p>Please enter your username and password</p>
-    </div>
-
     <div class = "container">
       <form class="form-horizontal">
+        <div class="form-group">
+          <div class="col-sm-offset-3 col-sm-4">
+            <h2>Login Page</h2>
+            <p>Please enter your username and password</p>
+          </div>
+        </div>
         <div class="form-group">
           <label class="control-label col-sm-4" for="username">Username:</label>
           <div class="col-sm-5">
@@ -51,7 +55,12 @@
         </div>
         <div class="form-group">        
           <div class="col-sm-offset-4 col-sm-5">
-            <button type="submit" id="submit" class="btn btn-default">Submit</button>
+            <button type="submit" id="submit" class="btn btn-default">Login</button>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-4 col-sm-5">
+            <p>Not registered? <a class="register_link" href="register_page.html" target="_self">Register</a> </p>
           </div>
         </div>
       </form>
