--- a/landing_page.html
+++ b/landing_page.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Polls</a>
+          <a class="navbar-brand" href="#">Notes</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./login_page.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -25,7 +25,7 @@
       </div>
     </nav>
 
-    <h2 id="heading">Welcome to the Polls Home Page</h2>
+    <h2 id="heading">Welcome to the Notes Web App</h2>
 
   </body>
 </html>
