Connect web app to apache server and handle register button response

--- a/pages/home_page.html
+++ b/pages/home_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="home_page_styles.css">
+    <link rel="stylesheet" href="../pages/home_page_styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./landing_page.html">Notes</a>
+          <a class="navbar-brand" href="../pages/landing_page.html">Notes</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
@@ -30,7 +30,7 @@
       </div>
     </nav>
 
-    <p>Polls in Card View</p>
+    <p>notes in Card View</p>
 
   </body>
 </html>
