--- a/pages/landing_page.html
+++ b/pages/landing_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="landing_page_styles.css">
+    <link rel="stylesheet" href="../pages/landing_page_styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" conent="ie=edge">
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    <title>Poll Web App</title>
+    <title>Notes Web App</title>
   </head>
 
   <body>
@@ -20,7 +20,7 @@
           <a class="navbar-brand" href="#">Notes</a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="./login_page.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <li><a href="../pages/login_page.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
       </div>
     </nav>
