--- a/pages/login_page.html
+++ b/pages/login_page.html
@@ -2,7 +2,7 @@
 
 <html lang="en-US">
   <head>
-    <link rel="stylesheet" href="login_styles.css">
+    <link rel="stylesheet" href="../pages/login_styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./landing_page.html">Notes</a>
+          <a class="navbar-brand" href="../pages/landing_page.html">Notes</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Login</a></li>
@@ -60,7 +60,7 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-4 col-sm-5">
-            <p>Not registered? <a class="register_link" href="register_page.html" target="_self">Register</a> </p>
+            <p>Not registered? <a class="register_link" href="../pages/register_page.html" target="_self">Register</a> </p>
           </div>
         </div>
       </form>
