--- a/pages/register_page.html
+++ b/pages/register_page.html
@@ -2,13 +2,14 @@
 
 <html lang="en-US">
   <head>
-    <link rel="stylesheet" href="register_styles.css">
+    <link rel="stylesheet" href="../pages/register_styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="../handlers/register.js"></script>
 
     <title>Register Page</title>
   </head>
@@ -18,7 +19,7 @@
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="./landing_page.html">Notes</a>
+          <a class="navbar-brand" href="../pages/landing_page.html">Notes</a>
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Register</a></li>
@@ -27,7 +28,7 @@
     </nav>
 
     <div class = "container">
-      <form class="form-horizontal">
+      <form id="register_form" class="form-horizontal">
         <div class="form-group">
           <div class="col-sm-offset-3 col-sm-5">
             <h2>Register</h2>
@@ -60,7 +61,7 @@
         </div>
         <div class="form-group">        
           <div class="col-sm-offset-4 col-sm-5">
-            <button type="register_button" id="register_button" class="btn btn-default">Register</button>
+            <button type="submit" id="register_button" class="btn btn-default">Register</button>
           </div>
         </div>
       </form>
