--- a/pages/register_page.html
+++ b/pages/register_page.html
@@ -32,31 +32,31 @@
         <div class="form-group">
           <div class="col-sm-offset-3 col-sm-5">
             <h2>Register</h2>
-            <p>Please enter information below.</p>
+            <p>Please enter information below. Space characters surrounding entered values will be removed, including for password.</p>
           </div>
         </div>
         <div class="form-group">
           <label class="control-label col-sm-4" for="first_name">First Name:</label>
           <div class="col-sm-5">
-            <input type="text" class="form-control" id="first_name" placeholder="Enter first name" name="first_name">
+            <input type="text" class="form-control" id="first_name" placeholder="Enter first name" name="first_name"><div class="error_message" id="first_name_error"></div>
           </div>
         </div>
         <div class="form-group">
           <label class="control-label col-sm-4" for="last_name">Last Name:</label>
           <div class="col-sm-5">
-            <input type="text" class="form-control" id="last_name" placeholder="Enter last name" name="last_name">
+            <input type="text" class="form-control" id="last_name" placeholder="Enter last name" name="last_name"><div class="error_message" id="last_name_error"></div>
           </div>
         </div>
         <div class="form-group">
           <label class="control-label col-sm-4" for="username">Create username:</label>
           <div class="col-sm-5">
-            <input type="text" class="form-control" id="username" placeholder="Enter username" name="username">
+            <input type="text" class="form-control" id="username" placeholder="Enter username" name="username"><div class="error_message" id="username_error"></div>
           </div>
         </div>
         <div class="form-group">
           <label class="control-label col-sm-4" for="password">Create password:</label>
           <div class="col-sm-5">
-            <input type="password" class="form-control" id="password" placeholder="Enter password" name="password">
+            <input type="password" class="form-control" id="password" placeholder="Enter password" name="password"><div class="error_message" id="password_error"></div>
           </div>
         </div>
         <div class="form-group">        
