Save registered user to mysql database

--- a/pages/register_page.html
+++ b/pages/register_page.html
@@ -33,6 +33,7 @@
           <div class="col-sm-offset-3 col-sm-5">
             <h2>Register</h2>
             <p>Please enter information below. Space characters surrounding entered values will be removed, including for password.</p>
+            <div class="error_message" id="general_error"></div>
           </div>
         </div>
         <div class="form-group">
