Verify users who attempt to login

--- a/pages/login_page.html
+++ b/pages/login_page.html
@@ -33,7 +33,7 @@
         <div class="form-group">
           <div class="col-sm-offset-3 col-sm-4">
             <h2>Login Page</h2>
-            <p>Please enter your username and password</p>
+            <p>Please enter your username and password. Space characters surrounding entered values will be removed, including for password.</p>
             <div class="error_message" id="general_error"></div>
           </div>
         </div>
