Set up grid to display notes and fetch notes for logged in user

--- a/pages/account_page.html
+++ b/pages/account_page.html
@@ -33,6 +33,12 @@
     </nav>
 
     <div id="message"></div>
+    <div id="main_page_error"></div>
+    <div id="cards_holder" class="cards_container">
+      <div class="card">
+        <a href="#"><h5 class="card_title">Card Title 1</h5></a>
+      </div>
+    </div>
 
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
