--- a/pages/account_page.html
+++ b/pages/account_page.html
@@ -25,7 +25,7 @@
           <li class="active"><a href="#">Home</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" data-toggle="modal" data-target="#exampleModal"><span class="glyphicon glyphicon-plus"></span> Add</a></li>
+          <li><a href="#" data-toggle="modal" data-target="#addModal"><span class="glyphicon glyphicon-plus"></span> Add</a></li>
           <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
           <li><a href="#" id="logout_button"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
@@ -33,18 +33,15 @@
     </nav>
 
     <div id="message"></div>
-    <div id="main_page_error"></div>
+    <div id="main_page_error" class="error_message"></div>
     <div id="cards_holder" class="cards_container">
-      <div class="card">
-        <a href="#"><h5 class="card_title">Card Title 1</h5></a>
-      </div>
     </div>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button type="button" id="close_add" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
             <h3 class="modal-title" id="exampleModalLabel">Add Note</h3>
@@ -73,5 +70,40 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" id="close_update" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h3 class="modal-title" id="exampleModalLabel">Update Note</h3>
+          </div>
+          <div class="modal-body">
+            <div class = "container">
+              <form id="update_form" class="form-horizontal">
+                <div class="form-group">
+                  <p>Please enter new note details. All space characters count for body but surrounding space <br> characters removed for title, so title can not be empty. Note max 150 chars. <br> Closing window means progress of text typed is lost.</p>
+                  <div class="error_message" id="general_update_note_error"></div>
+                </div>
+                <div class="form-group">
+                  <label for="note_title_update">Note Title:</label>
+                  <input type="text" id="note_title_update" placeholder="Enter title" name="note_title_update"><div class="error_message" id="note_title_update_error"></div>
+                </div>
+                <div class="form-group">
+                  <label for="note_body_update">Note: &emsp;&emsp;</label>
+                  <textarea id="note_body_update" placeholder="Enter note" name="note_body_update"></textarea>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="add_note_btn" class="btn btn-primary">Add</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
