Implement delete feature for notes and fix html id tag bug for notes

--- a/pages/account_page.html
+++ b/pages/account_page.html
@@ -99,6 +99,7 @@
             </div>
           </div>
           <div class="modal-footer">
+            <button type="button" id="delete_note_btn" class="btn btn-primary">Delete</button>
             <button type="button" id="update_note_btn" class="btn btn-primary">Update</button>
           </div>
         </div>
